# OpenGL_Practice

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: c-cpp.yml
docs/: 1.Hello_Window.md  2.Hello_Triangle.md  3.Shaders.md  4.Textures.md  5.Transformations.md  6.Coordinate_Systems.md  book.toml
docs/src/: 1.hello-window.md  2.hello-triangle.md  4.textures.md  6.coordinate_systems.md  SUMMARY.md
libraries/fastnoise/: FastNoise.h
libraries/find_resource/: find_resource.cpp  find_resource.h
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/shader/: shader.cpp  shader.h
source/1.Getting_Started/: .2.2.Hello_Rectangle.cpp.swp  1.Hello_Window.cpp  2.0.Hello_Triangle.cpp  2.1.Hello_Rectangle.cpp  2.1.Hello_Triangle.cpp  2.2.Exercise_Qn1.cpp  2.2.Hello_Rectangle.cpp  2.3.Exercise_Qn1.cpp  2.3.Exercise_Qn2.cpp  2.4.Exercise_Qn1.cpp  2.4.Exercise_Qn2.cpp  2.4.Exercise_Qn3.cpp  2.5.Exercise_Qn3.cpp  2.Hello_Triangle.cpp  3.0.Red_Triangle_Ex1.cpp  3.1.Green_To_Black_Ex2.cpp  3.2.Colorful_Triangle_Ex3.cpp  3.3.Exercise_Qn1.cpp.in  3.3.fragment.glsl  3.3.vertex.glsl  3.4.Exercise_Qn2.cpp.in  3.4.fragment.glsl  3.4.vertex.glsl  3.5.fragment.glsl
source/1.Getting_Started/3.Shaders/: 1.Red_Triangle_Ex1.cpp  2.Green_To_Black_Ex2.cpp  3.Colorful_Triangle_Ex3.cpp  4.Exercise_Qn1.cpp  4.Exercise_Qn1.cpp.in  5.Exercise_Qn2.cpp  5.Exercise_Qn2.cpp.in  6.Exercise_Qn3.cpp  6.Exercise_Qn3.cpp.in  6.vertex.glsl
source/1.Getting_Started/4.0.Textures/: 1.Textures.cpp  2.Texture_Units.cpp
source/1.Getting_Started/4.Textures/: 1.Textures.cpp  2.Texture_Units.cpp
source/1.Getting_Started/5.Transformations/: 1.Transformations.cpp  1.vertex.glsl  2.Rotation.cpp
source/1.Getting_Started/6.Coordinate_Systems/: 1.Hello_Coordinates.cpp  1.fragment.glsl  1.vertex.glsl  2.One_Cube.cpp  2.vertex.glsl  3.Many_Cubes.cpp
source/I.Noise/1.Hello_Noise/: fragment.glsl  hello_noise.cpp
source/I.Noise/2.imGUI_Noise/: imgui_noise.cpp
source/II.imGUI/1.Hello_imGUI/: main.cpp
